--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,20 @@ spring.application.name=firstproject
 # 한글 인코딩
 server.servlet.encoding.force=true
 
+# JPA
 spring.jpa.show-sql=true
+# 쿼리 줄바꿈
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:h2:mem:articledb
+# 고정 URL 설정하기
+spring.datasource.url=jdbc:h2:mem:testdb
 
 # H2 DB 접속
 spring.h2.console.enabled=true
+
+# JPA 로깅 설정
+# 디버그 레벨로 쿼리 출력
+logging.level.org.hibernate.SQL=DEBUG
+# JPA쿼리에서 DB로 넘어가는 ?(매개변수) 값 보여주기
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
